--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-led for receive
+led for receive message on device from workstation
 state machine for input gyro thing so no duplicate inputs
 make other button toggle between send and only receive mode
