--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 -led for receive message on device from workstation
 -state machine for input gyro thing so no duplicate inputs
-make other button toggle between send and only receive mode
-startup chime
+-make other button toggle between send and only receive mode
+-startup chime
+temp sensor ehkä
